# cit_project

ciandt_it-nextgen_time28-c01df5cce7b2/: .gitignore  README.md  bitbucket-pipelines.yml  docker-compose-dev.yml  docker-compose.yml  docs-requirements.txt  mkdocs.yml  package-lock.json  package.json  run.sh  update_toc.py
ciandt_it-nextgen_time28-c01df5cce7b2/docs/: estrutura_bootcamp.md  features.md  index.md  rodando_projeto_docker_compose.md  rodando_projeto_manualmente.md
ciandt_it-nextgen_time28-c01df5cce7b2/docs/conteúdo_didático_(opcional)/: Domain_Driven_Design.md  SOLID.md
ciandt_it-nextgen_time28-c01df5cce7b2/docs/guia_de_início_rapido/: 00_GIT.md  01_conceitos_chave.md  02_microservices.md  03_monorepo.md  04_desenho_arquitetural.md  06_TDD.md  (+8 more)
ciandt_it-nextgen_time28-c01df5cce7b2/frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
ciandt_it-nextgen_time28-c01df5cce7b2/gateway/: nginx.conf
ciandt_it-nextgen_time28-c01df5cce7b2/install_scripts/: macos.sh  ubuntu.sh  windows.bat
ciandt_it-nextgen_time28-c01df5cce7b2/java_backend/: .dockerignore  Dockerfile  pom.xml
ciandt_it-nextgen_time28-c01df5cce7b2/node_backend/: Dockerfile
ciandt_it-nextgen_time28-c01df5cce7b2/python_backend/: .dockerignore  Dockerfile
ciandt_it-nextgen_time28-c01df5cce7b2/python_backend/feedbackresponseview/: pyproject.toml
ciandt_it-nextgen_time28-c01df5cce7b2/python_backend/feedbackresponseview/app/: main.py  models.py  repositories.py  services.py
ciandt_it-nextgen_time28-c01df5cce7b2/python_backend/feedbackresponseview/tests/: test_app.py
(+228 files in other folders)
